fix overflow

--- a/public/styles/landing.scss
+++ b/public/styles/landing.scss
@@ -8,6 +8,9 @@ body {
     text-shadow:            rgba(0, 0, 0, .01) 0 0 1px;
 
     min-width:              1200px;
+    width:                  100%;
+    height:                 100%;
+    overflow-x:             hidden;
 }
 
 *, ::after, ::before {
